gcc/testsuite/rust/rustc/ui/parser/attr-before-eof.rs
fn main() {}

#[derive(Debug)] // { dg-error "" "" { target *-*-* } }

